Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/conftest.html
+++ b/backend/conftest.html
@@ -110,12 +110,6 @@ def pytest_addoption(parser):
         help=&#39;private key to access Harvester node&#39;
     )
     parser.addoption(
-        &#39;--do-not-cleanup&#39;,
-        action=&#39;store_true&#39;,
-        default=config_data[&#39;do-not-cleanup&#39;],
-        help=&#39;Do not cleanup the test artifacts&#39;
-    )
-    parser.addoption(
         &#39;--vlan-id&#39;,
         action=&#39;store&#39;,
         type=int,
@@ -151,12 +145,6 @@ def pytest_addoption(parser):
               &#39;Harvester node to facilitate the host-specific tests&#39;)
     )
     parser.addoption(
-        &#39;--win-image-url&#39;,
-        action=&#39;store&#39;,
-        default=config_data[&#39;win-image-url&#39;],
-        help=(&#39;Windows image URL &#39;)
-    )
-    parser.addoption(
         &#39;--opensuse-image-url&#39;,
         action=&#39;store&#39;,
         default=config_data.get(&#39;opensuse-image-url&#39;),
@@ -167,12 +155,6 @@ def pytest_addoption(parser):
         action=&#39;store&#39;,
         default=config_data[&#39;terraform-scripts-location&#39;],
         help=(&#39;External scripts to create resources using terraform&#39;)
-    )
-    parser.addoption(
-        &#39;--backup-scripts-location&#39;,
-        action=&#39;store&#39;,
-        default=config_data[&#39;backup-scripts-location&#39;],
-        help=(&#39;scripts to create files inside a VM&#39;)
     )
     parser.addoption(
         &#39;--image-cache-url&#39;,
@@ -217,13 +199,6 @@ def pytest_addoption(parser):
         help=(&#39;Endpoint for storing backup in nfs share&#39;)
     )
     parser.addoption(
-        &#39;--rancher-version&#39;,
-        action=&#39;store&#39;,
-        default=config_data[&#39;rancher-version&#39;],
-        help=(&#39;Rancher Docker image version to use when bootstrapping Rancher &#39;
-              &#39;VM in Harvester&#39;)
-    )
-    parser.addoption(
         &#39;--rancher-endpoint&#39;,
         action=&#39;store&#39;,
         default=config_data.get(&#39;rancher-endpoint&#39;, None),
@@ -236,12 +211,6 @@ def pytest_addoption(parser):
         help=&#39;Rancher admin user password&#39;
     )
     parser.addoption(
-        &#39;--kubernetes-version&#39;,
-        action=&#39;store&#39;,
-        default=config_data.get(&#39;kubernetes-version&#39;),
-        help=&#39;Kubernetes version to use for Rancher integration tests&#39;
-    )
-    parser.addoption(
         &#39;--RKE2-version&#39;,
         action=&#39;store&#39;,
         default=config_data.get(&#39;RKE2-version&#39;),
@@ -252,16 +221,6 @@ def pytest_addoption(parser):
         action=&#39;store&#39;,
         default=config_data.get(&#39;RKE1-version&#39;),
         help=&#39;RKE1 Kubernetes version to use for Rancher integration tests&#39;
-    )
-    parser.addoption(
-        &#39;--test-environment&#39;,
-        action=&#39;store&#39;,
-        default=&#39;local&#39;,
-        help=(&#39;QE test environment (e.g. chiefs, raiders, etc), for &#39;
-              &#39;distinguishing the test artifacts in the case where an &#39;
-              &#39;dependency (e.g. Rancher) is shared amongst the &#39;
-              &#39;test environments. If you are running local Vagrant, you &#39;
-              &#39;should name the environment to your username (e.g. gyee)&#39;)
     )
     parser.addoption(
         &#39;--rancher-cluster-wait-timeout&#39;,
@@ -318,59 +277,11 @@ def pytest_addoption(parser):
         default=config_data.get(&#39;terraform-provider-harvester&#39;),
         help=(&#39;Version of Terraform Harvester Provider&#39;)
     )
-    # TODO(gyee): may need to add SSL options later
 
 
 def pytest_configure(config):
     # Register marker as the format (marker, (description))
     markers = [
-        (&#39;public_network&#39;, (&#39;mark test to run only if public networking is available&#39;)),
-        (&#39;multi_node_scheduling&#39;, (
-            &#39;mark test to run only if we have a multi-node cluster&#39;
-            &#39; where some hosts have more resources then others in order to test VM&#39;
-            &#39; scheduling behavior&#39;)),
-        (&#39;host_management&#39;, (
-            &#39;mark test to run only if we have &#39;
-            &#39;host management (power_on.sh, power_off.sh, reboot.sh) &#39;
-            &#39;scripts provided. These tests are designed to test &#39;
-            &#39;scheduling resiliency and disaster recovery scenarios. &#39;)),
-        (&#39;backupnfs&#39;, (
-            &#39;mark test to run only the backup and restore&#39;
-            &#39;tests for NFS backup target&#39;)),
-        (&#39;backups3&#39;, (
-            &#39;mark test to run only the backup and restore&#39;
-            &#39;tests for S3 backup target&#39;)),
-        (&#39;imageupload&#39;, (&#39;marker to run imageupload test&#39;)),
-        (&#39;singlevmtest&#39;, (&#39;marker to run create single vm test&#39;)),
-        (&#39;multivmtest&#39;, (&#39;marker to run create multiple vms test&#39;)),
-        (&#39;windows_vm&#39;, (
-            &#39;marker to run only create vm test &#39;
-            &#39;using windows images&#39;)),
-        (&#39;usbvmtest&#39;, (&#39;marker to run only create vm test with usb&#39;)),
-        (&#39;nouserdata&#39;, (&#39;marker to run only create vm test with nouserdata&#39;)),
-        (&#39;images_p1&#39;, (&#39;mark test to run only to execute the P1 test for images&#39;)),
-        (&#39;images_p2&#39;, (&#39;mark test to run only to execute the P2 test for images&#39;)),
-        (&#39;terraform_provider_p1&#39;, (
-            &#39;mark test to run only to execute the P1 test for terraform provider&#39;)),
-        (&#39;imageupload&#39;, (&#39;mark test to run upload image&#39;)),
-        (&#39;virtual_machines_p1&#39;, (&#39;marker to run only P1 Virtual Machine test&#39;)),
-        (&#39;virtual_machines_p2&#39;, (&#39;marker to run only P2 Virtual Machine test&#39;)),
-        (&#39;network_p1&#39;, (&#39;marker to run only P1 Network test &#39;)),
-        (&#39;network_p2&#39;, (&#39;marker to run only P2 Network test &#39;)),
-        (&#39;volumes_p1&#39;, (&#39;mark test to run only P1 test for Volume&#39;)),
-        (&#39;volumes_p2&#39;, (&#39;mark test to run only P2 test for Volume&#39;)),
-        (&#39;authentication_p1&#39;, (&#39;mark test to run only P1 test for authentication&#39;)),
-        (&#39;backup_and_restore_p1&#39;, (
-            &#39;mark test to run only to execute the P1 test for Backup and Recovery&#39;)),
-        (&#39;backup_and_restore_p2&#39;, (
-            &#39;mark test to run only to execute the P2 test for Backup and Recovery&#39;)),
-        (&#39;terraform_provider_p1&#39;, (&#39;mark test to run only P1 test for terraform provider&#39;)),
-        (&#39;rancher_integration_with_external_rancher&#39;, (
-            &#39;mark Rancher integration tests with an external Rancher&#39;)),
-        (&#39;rke1&#39;, (&#39;marker to run rke1 integration tests &#39;)),
-        (&#39;rke2&#39;, (&#39;marker to run rke2 integration tests &#39;)),
-
-        # deprecated markers above would be removed.
         (&#34;skip_version_before&#34;, (
             &#34;mark test skipped when cluster version &lt; provided version&#34;)),
         (&#34;skip_version_after&#34;, (
@@ -393,7 +304,9 @@ def pytest_configure(config):
         (&#34;any_nodes&#34;, (&#34;{_r} tests which could be ran on clushter with any nodes&#34;)),
         (&#34;single_node&#34;, (&#34;{_r} tests which could only be ran on cluster with single node&#34;)),
         (&#34;three_nodes&#34;, (&#34;{_r} tests which could only be ran on cluster with three nodes&#34;)),
-        (&#39;rancher&#39;, (&#34;{_r} reancher integration tests&#34;)),
+        (&#39;rancher&#39;, (&#34;{_r} rancher integration tests&#34;)),
+        (&#39;rke1&#39;, (&#34;{_r} rancher RKE1 tests&#34;)),
+        (&#39;rke2&#39;, (&#34;{_r} rancher RKE2 tests&#34;)),
         (&#39;terraform&#39;, (&#34;{_r} terraform tests&#34;)),
         (&#39;virtualmachines&#39;, (&#39;{_r} virtualmachines tests&#39;)),
         (&#39;backup_target&#39;, (&#39;{_r} backup-target tests&#39;)),
@@ -414,13 +327,6 @@ def pytest_collection_modifyitems(session, config, items):
         for item in items:
             if &#39;public_network&#39; in item.keywords:
                 item.add_marker(skip_public_network)
-
-    if config.getoption(&#39;--win-image-url&#39;) == &#39;&#39;:
-        skip_windows_vm = pytest.mark.skip(reason=(
-            &#39;Windows image not specified&#39;))
-        for item in items:
-            if &#39;windows_vm&#39; in item.keywords:
-                item.add_marker(skip_windows_vm)
 
     if (config.getoption(&#39;--nfs-endpoint&#39;) == &#39;&#39; and
             config.getoption(&#39;--accessKeyId&#39;) == &#39;&#39;):
@@ -607,12 +513,6 @@ def pytest_collection_modifyitems(session, config, items):
         help=&#39;private key to access Harvester node&#39;
     )
     parser.addoption(
-        &#39;--do-not-cleanup&#39;,
-        action=&#39;store_true&#39;,
-        default=config_data[&#39;do-not-cleanup&#39;],
-        help=&#39;Do not cleanup the test artifacts&#39;
-    )
-    parser.addoption(
         &#39;--vlan-id&#39;,
         action=&#39;store&#39;,
         type=int,
@@ -648,12 +548,6 @@ def pytest_collection_modifyitems(session, config, items):
               &#39;Harvester node to facilitate the host-specific tests&#39;)
     )
     parser.addoption(
-        &#39;--win-image-url&#39;,
-        action=&#39;store&#39;,
-        default=config_data[&#39;win-image-url&#39;],
-        help=(&#39;Windows image URL &#39;)
-    )
-    parser.addoption(
         &#39;--opensuse-image-url&#39;,
         action=&#39;store&#39;,
         default=config_data.get(&#39;opensuse-image-url&#39;),
@@ -664,12 +558,6 @@ def pytest_collection_modifyitems(session, config, items):
         action=&#39;store&#39;,
         default=config_data[&#39;terraform-scripts-location&#39;],
         help=(&#39;External scripts to create resources using terraform&#39;)
-    )
-    parser.addoption(
-        &#39;--backup-scripts-location&#39;,
-        action=&#39;store&#39;,
-        default=config_data[&#39;backup-scripts-location&#39;],
-        help=(&#39;scripts to create files inside a VM&#39;)
     )
     parser.addoption(
         &#39;--image-cache-url&#39;,
@@ -714,13 +602,6 @@ def pytest_collection_modifyitems(session, config, items):
         help=(&#39;Endpoint for storing backup in nfs share&#39;)
     )
     parser.addoption(
-        &#39;--rancher-version&#39;,
-        action=&#39;store&#39;,
-        default=config_data[&#39;rancher-version&#39;],
-        help=(&#39;Rancher Docker image version to use when bootstrapping Rancher &#39;
-              &#39;VM in Harvester&#39;)
-    )
-    parser.addoption(
         &#39;--rancher-endpoint&#39;,
         action=&#39;store&#39;,
         default=config_data.get(&#39;rancher-endpoint&#39;, None),
@@ -733,12 +614,6 @@ def pytest_collection_modifyitems(session, config, items):
         help=&#39;Rancher admin user password&#39;
     )
     parser.addoption(
-        &#39;--kubernetes-version&#39;,
-        action=&#39;store&#39;,
-        default=config_data.get(&#39;kubernetes-version&#39;),
-        help=&#39;Kubernetes version to use for Rancher integration tests&#39;
-    )
-    parser.addoption(
         &#39;--RKE2-version&#39;,
         action=&#39;store&#39;,
         default=config_data.get(&#39;RKE2-version&#39;),
@@ -749,16 +624,6 @@ def pytest_collection_modifyitems(session, config, items):
         action=&#39;store&#39;,
         default=config_data.get(&#39;RKE1-version&#39;),
         help=&#39;RKE1 Kubernetes version to use for Rancher integration tests&#39;
-    )
-    parser.addoption(
-        &#39;--test-environment&#39;,
-        action=&#39;store&#39;,
-        default=&#39;local&#39;,
-        help=(&#39;QE test environment (e.g. chiefs, raiders, etc), for &#39;
-              &#39;distinguishing the test artifacts in the case where an &#39;
-              &#39;dependency (e.g. Rancher) is shared amongst the &#39;
-              &#39;test environments. If you are running local Vagrant, you &#39;
-              &#39;should name the environment to your username (e.g. gyee)&#39;)
     )
     parser.addoption(
         &#39;--rancher-cluster-wait-timeout&#39;,
@@ -814,8 +679,7 @@ def pytest_collection_modifyitems(session, config, items):
         action=&#39;store&#39;,
         default=config_data.get(&#39;terraform-provider-harvester&#39;),
         help=(&#39;Version of Terraform Harvester Provider&#39;)
-    )
-    # TODO(gyee): may need to add SSL options later</code></pre>
+    )</code></pre>
 </details>
 </dd>
 <dt id="harvester_e2e_tests.conftest.pytest_collection_modifyitems"><code class="name flex">
@@ -835,13 +699,6 @@ def pytest_collection_modifyitems(session, config, items):
         for item in items:
             if &#39;public_network&#39; in item.keywords:
                 item.add_marker(skip_public_network)
-
-    if config.getoption(&#39;--win-image-url&#39;) == &#39;&#39;:
-        skip_windows_vm = pytest.mark.skip(reason=(
-            &#39;Windows image not specified&#39;))
-        for item in items:
-            if &#39;windows_vm&#39; in item.keywords:
-                item.add_marker(skip_windows_vm)
 
     if (config.getoption(&#39;--nfs-endpoint&#39;) == &#39;&#39; and
             config.getoption(&#39;--accessKeyId&#39;) == &#39;&#39;):
@@ -956,53 +813,6 @@ def pytest_collection_modifyitems(session, config, items):
 <pre><code class="python">def pytest_configure(config):
     # Register marker as the format (marker, (description))
     markers = [
-        (&#39;public_network&#39;, (&#39;mark test to run only if public networking is available&#39;)),
-        (&#39;multi_node_scheduling&#39;, (
-            &#39;mark test to run only if we have a multi-node cluster&#39;
-            &#39; where some hosts have more resources then others in order to test VM&#39;
-            &#39; scheduling behavior&#39;)),
-        (&#39;host_management&#39;, (
-            &#39;mark test to run only if we have &#39;
-            &#39;host management (power_on.sh, power_off.sh, reboot.sh) &#39;
-            &#39;scripts provided. These tests are designed to test &#39;
-            &#39;scheduling resiliency and disaster recovery scenarios. &#39;)),
-        (&#39;backupnfs&#39;, (
-            &#39;mark test to run only the backup and restore&#39;
-            &#39;tests for NFS backup target&#39;)),
-        (&#39;backups3&#39;, (
-            &#39;mark test to run only the backup and restore&#39;
-            &#39;tests for S3 backup target&#39;)),
-        (&#39;imageupload&#39;, (&#39;marker to run imageupload test&#39;)),
-        (&#39;singlevmtest&#39;, (&#39;marker to run create single vm test&#39;)),
-        (&#39;multivmtest&#39;, (&#39;marker to run create multiple vms test&#39;)),
-        (&#39;windows_vm&#39;, (
-            &#39;marker to run only create vm test &#39;
-            &#39;using windows images&#39;)),
-        (&#39;usbvmtest&#39;, (&#39;marker to run only create vm test with usb&#39;)),
-        (&#39;nouserdata&#39;, (&#39;marker to run only create vm test with nouserdata&#39;)),
-        (&#39;images_p1&#39;, (&#39;mark test to run only to execute the P1 test for images&#39;)),
-        (&#39;images_p2&#39;, (&#39;mark test to run only to execute the P2 test for images&#39;)),
-        (&#39;terraform_provider_p1&#39;, (
-            &#39;mark test to run only to execute the P1 test for terraform provider&#39;)),
-        (&#39;imageupload&#39;, (&#39;mark test to run upload image&#39;)),
-        (&#39;virtual_machines_p1&#39;, (&#39;marker to run only P1 Virtual Machine test&#39;)),
-        (&#39;virtual_machines_p2&#39;, (&#39;marker to run only P2 Virtual Machine test&#39;)),
-        (&#39;network_p1&#39;, (&#39;marker to run only P1 Network test &#39;)),
-        (&#39;network_p2&#39;, (&#39;marker to run only P2 Network test &#39;)),
-        (&#39;volumes_p1&#39;, (&#39;mark test to run only P1 test for Volume&#39;)),
-        (&#39;volumes_p2&#39;, (&#39;mark test to run only P2 test for Volume&#39;)),
-        (&#39;authentication_p1&#39;, (&#39;mark test to run only P1 test for authentication&#39;)),
-        (&#39;backup_and_restore_p1&#39;, (
-            &#39;mark test to run only to execute the P1 test for Backup and Recovery&#39;)),
-        (&#39;backup_and_restore_p2&#39;, (
-            &#39;mark test to run only to execute the P2 test for Backup and Recovery&#39;)),
-        (&#39;terraform_provider_p1&#39;, (&#39;mark test to run only P1 test for terraform provider&#39;)),
-        (&#39;rancher_integration_with_external_rancher&#39;, (
-            &#39;mark Rancher integration tests with an external Rancher&#39;)),
-        (&#39;rke1&#39;, (&#39;marker to run rke1 integration tests &#39;)),
-        (&#39;rke2&#39;, (&#39;marker to run rke2 integration tests &#39;)),
-
-        # deprecated markers above would be removed.
         (&#34;skip_version_before&#34;, (
             &#34;mark test skipped when cluster version &lt; provided version&#34;)),
         (&#34;skip_version_after&#34;, (
@@ -1025,7 +835,9 @@ def pytest_collection_modifyitems(session, config, items):
         (&#34;any_nodes&#34;, (&#34;{_r} tests which could be ran on clushter with any nodes&#34;)),
         (&#34;single_node&#34;, (&#34;{_r} tests which could only be ran on cluster with single node&#34;)),
         (&#34;three_nodes&#34;, (&#34;{_r} tests which could only be ran on cluster with three nodes&#34;)),
-        (&#39;rancher&#39;, (&#34;{_r} reancher integration tests&#34;)),
+        (&#39;rancher&#39;, (&#34;{_r} rancher integration tests&#34;)),
+        (&#39;rke1&#39;, (&#34;{_r} rancher RKE1 tests&#34;)),
+        (&#39;rke2&#39;, (&#34;{_r} rancher RKE2 tests&#34;)),
         (&#39;terraform&#39;, (&#34;{_r} terraform tests&#34;)),
         (&#39;virtualmachines&#39;, (&#39;{_r} virtualmachines tests&#39;)),
         (&#39;backup_target&#39;, (&#39;{_r} backup-target tests&#39;)),
