--- a/backend/integration/test_upgrade.html
+++ b/backend/integration/test_upgrade.html
@@ -764,8 +764,8 @@ def vm_prereq(cluster_state, api_client, vm_shell, wait_timeout):
     if vm2_name is None:
         vm2_name = f&#34;vm2-{cluster_state.unique_id}&#34;
         restore_spec = api_client.backups.RestoreSpec(True, vm_name=vm2_name)
-        code, data = api_client.backups.create(cluster_state.backup[&#39;metadata&#39;][&#39;name&#39;],
-                                               restore_spec)
+        code, data = api_client.backups.restore(cluster_state.backup[&#39;metadata&#39;][&#39;name&#39;],
+                                                restore_spec)
         assert code == 201, (
             f&#34;Failed to restore to vm2: {data}&#34;)
 
@@ -1604,8 +1604,8 @@ def vm_prereq(cluster_state, api_client, vm_shell, wait_timeout):
     if vm2_name is None:
         vm2_name = f&#34;vm2-{cluster_state.unique_id}&#34;
         restore_spec = api_client.backups.RestoreSpec(True, vm_name=vm2_name)
-        code, data = api_client.backups.create(cluster_state.backup[&#39;metadata&#39;][&#39;name&#39;],
-                                               restore_spec)
+        code, data = api_client.backups.restore(cluster_state.backup[&#39;metadata&#39;][&#39;name&#39;],
+                                                restore_spec)
         assert code == 201, (
             f&#34;Failed to restore to vm2: {data}&#34;)
 
