--- a/backend/fixtures/api_client.html
+++ b/backend/fixtures/api_client.html
@@ -242,12 +242,21 @@ def host_shell(request):
                 kws.update(kwargs)
                 cli.connect(ipaddr, port, **kws)
 
-        def login(self, ipaddr, port=22, jumphost=False, **kwargs):
+        def login(self, ipaddr, port=22, jumphost=False, allow_agent=False,
+                  look_for_keys=False, **kwargs):
             if not self.client:
                 cli = SSHClient()
                 cli.set_missing_host_key_policy(MissingHostKeyPolicy())
                 kws = dict(username=self.username, password=self.password, pkey=self.pkey)
                 kws.update(kwargs)
+
+                # in case we&#39;re using a password to log into the host, this
+                # prevents paramiko from getting confused by ssh keys in the ssh
+                # agent:
+                if self.password and not self.pkey:
+                    kws.update(dict(allow_agent=allow_agent,
+                                    look_for_keys=look_for_keys))
+
                 cli.connect(ipaddr, port, **kws)
                 self._client = cli
 
@@ -479,12 +488,21 @@ def host_shell(request):
                 kws.update(kwargs)
                 cli.connect(ipaddr, port, **kws)
 
-        def login(self, ipaddr, port=22, jumphost=False, **kwargs):
+        def login(self, ipaddr, port=22, jumphost=False, allow_agent=False,
+                  look_for_keys=False, **kwargs):
             if not self.client:
                 cli = SSHClient()
                 cli.set_missing_host_key_policy(MissingHostKeyPolicy())
                 kws = dict(username=self.username, password=self.password, pkey=self.pkey)
                 kws.update(kwargs)
+
+                # in case we&#39;re using a password to log into the host, this
+                # prevents paramiko from getting confused by ssh keys in the ssh
+                # agent:
+                if self.password and not self.pkey:
+                    kws.update(dict(allow_agent=allow_agent,
+                                    look_for_keys=look_for_keys))
+
                 cli.connect(ipaddr, port, **kws)
                 self._client = cli
 
