Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/index.html
+++ b/backend/index.html
@@ -59,7 +59,7 @@
 <dd>
 <div class="desc"></div>
 </dd>
-<dt><code class="name"><a title="harvester_e2e_tests.integration" href="integration/index.html">harvester_e2e_tests.integration</a></code></dt>
+<dt><code class="name"><a title="harvester_e2e_tests.integrations" href="integrations/index.html">harvester_e2e_tests.integrations</a></code></dt>
 <dd>
 <div class="desc"></div>
 </dd>
@@ -83,7 +83,7 @@
 <li><code><a title="harvester_e2e_tests.apis" href="apis/index.html">harvester_e2e_tests.apis</a></code></li>
 <li><code><a title="harvester_e2e_tests.conftest" href="conftest.html">harvester_e2e_tests.conftest</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures" href="fixtures/index.html">harvester_e2e_tests.fixtures</a></code></li>
-<li><code><a title="harvester_e2e_tests.integration" href="integration/index.html">harvester_e2e_tests.integration</a></code></li>
+<li><code><a title="harvester_e2e_tests.integrations" href="integrations/index.html">harvester_e2e_tests.integrations</a></code></li>
 </ul>
 </li>
 </ul>
