--- a/backend/integrations/index.html
+++ b/backend/integrations/index.html
@@ -78,6 +78,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integrations.test_z_terraform_rancher" href="test_z_terraform_rancher.html">harvester_e2e_tests.integrations.test_z_terraform_rancher</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integrations.vmconsole" href="vmconsole.html">harvester_e2e_tests.integrations.vmconsole</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -117,6 +121,7 @@
 <li><code><a title="harvester_e2e_tests.integrations.test_9_rancher_integration" href="test_9_rancher_integration.html">harvester_e2e_tests.integrations.test_9_rancher_integration</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_upgrade" href="test_upgrade.html">harvester_e2e_tests.integrations.test_upgrade</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_z_terraform" href="test_z_terraform.html">harvester_e2e_tests.integrations.test_z_terraform</a></code></li>
+<li><code><a title="harvester_e2e_tests.integrations.test_z_terraform_rancher" href="test_z_terraform_rancher.html">harvester_e2e_tests.integrations.test_z_terraform_rancher</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.vmconsole" href="vmconsole.html">harvester_e2e_tests.integrations.vmconsole</a></code></li>
 </ul>
 </li>
