Update testing docs
Signed-off-by: lanfon72 <lanfon72@users.noreply.github.com>

--- a/backend/conftest.html
+++ b/backend/conftest.html
@@ -288,6 +288,7 @@ def pytest_addoption(parser):
 def pytest_configure(config):
     # Register marker as the format (marker, (description))
     markers = [
+        (&#34;skip_version_if&#34;, &#34;Mark test skipped when cluster version hit the condition&#34;),
         (&#34;skip_version_before&#34;, (
             &#34;mark test skipped when cluster version &lt; provided version&#34;)),
         (&#34;skip_version_after&#34;, (
@@ -825,6 +826,7 @@ def pytest_collection_modifyitems(session, config, items):
 <pre><code class="python">def pytest_configure(config):
     # Register marker as the format (marker, (description))
     markers = [
+        (&#34;skip_version_if&#34;, &#34;Mark test skipped when cluster version hit the condition&#34;),
         (&#34;skip_version_before&#34;, (
             &#34;mark test skipped when cluster version &lt; provided version&#34;)),
         (&#34;skip_version_after&#34;, (
