--- a/manual/volumes/1334-evict-disks-check-vms/index.html
+++ b/manual/volumes/1334-evict-disks-check-vms/index.html
@@ -1935,24 +1935,68 @@
   <div>
     <article id="content">
        <ul>
-<li>Related issues: <a href="https://github.com/harvester/harvester/issues/1334">#1334</a> Volumes fail with Scheduling Failure after evicting disc on multi-disc node</li>
+<li>Related issues
+<ul>
+<li><a href="https://github.com/harvester/harvester/issues/1334">#1334</a> Volumes fail with Scheduling Failure after evicting disc on multi-disc node</li>
+<li><a href="https://github.com/harvester/harvester/issues/5307">#5307</a> Replicas should be evicted and rescheduled to other disks before removing extrak disk</li>
+</ul>
+</li>
 </ul>
 <h2 id="verification-steps">Verification Steps</h2>
 <ol>
-<li>Created 3 node Harvester setup with ipxe example in KVM/libvirt</li>
-<li>Added formatted disk to node0 VM</li>
-<li>Created three VMs on node0</li>
-<li>Created large files on three VMs to see where they were located with dd if=/dev/urandom of=file1.txt count=5192 bs=1M</li>
-<li>Checked Longhorn to be sure that some VMs were on new disk</li>
-<li>Deleted disk from Harvester</li>
-<li>Checked Longhorn to be sure that disk was marked for eviction</li>
-<li>Verified that VMs were still available while evicting replicas by running commands from serial console/SSH</li>
-<li>Verified that disk was removed from Longhorn and VMS were still up.</li>
+<li>
+<p>Created 3 nodes Harvester.</p>
+</li>
+<li>
+<p>Added formatted disk (called disk A) to node0 VM in the harvester node page.</p>
+</li>
+<li>
+<p>Added disk tag <code>test</code> on following disk in the longhorn page.</p>
+<ol>
+<li>disk A of node0</li>
+<li>root disk of node1</li>
+<li>root disk of node2</li>
+</ol>
+</li>
+<li>
+<p>Created storage class with disk tag <code>test</code>.</p>
+</li>
+<li>
+<p>Created volume (called B) with previous storage class. You should check scheduling status in the longhorn page.</p>
+</li>
+<li>
+<p>Created VM with volume B as extra volume (not boot volume).</p>
+</li>
+<li>
+<p>The node scheduling status should look like this. 
+
+<img src="https://harvester.github.io/tests/images/volumes/1334-image-01.png" alt="images/volumes/1334-image-01.png"></p>
+</li>
+<li>
+<p>Deleted disk A in the harvester node page, error message should be displayed.</p>
+</li>
+<li>
+<p>Added disk tag <code>test</code> to <strong>root disk of node0</strong>.</p>
+</li>
+<li>
+<p>Requested eviction and disabled scheduling on disk A in the longhorn dashboard.
+Before:
+
+    
+    <img src="https://harvester.github.io/tests/images/volumes/1334-image-02.png" alt="images/volumes/1334-image-02.png"></p>
+<p>After:
+
+    
+    <img src="https://harvester.github.io/tests/images/volumes/1334-image-03.png" alt="images/volumes/1334-image-03.png"></p>
+</li>
+<li>
+<p>Removed disk A in the harvester node page, and it should be removed.</p>
+</li>
 </ol>
 <h2 id="expected-results">Expected Results</h2>
 <ol>
-<li>Disk is removed from Longhorn</li>
-<li>VMs stay up</li>
+<li>Disk A is removed on the harvester node page.</li>
+<li>VM is running in whole steps.</li>
 </ol>
 
     </article>
