Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/integrations/test_3_vm_functions.html
+++ b/backend/integrations/test_3_vm_functions.html
@@ -540,6 +540,9 @@ class TestVMOperations:
                     assert 204 == code, (code, err)
                 else:
                     break
+            elif len(states) == 1 and not m_state:
+                # we did abort migration, and the anootation removed
+                break
             sleep(3)
         else:
             raise AssertionError(
@@ -4437,6 +4440,9 @@ class TestVMOperations:
                     assert 204 == code, (code, err)
                 else:
                     break
+            elif len(states) == 1 and not m_state:
+                # we did abort migration, and the anootation removed
+                break
             sleep(3)
         else:
             raise AssertionError(
@@ -4570,6 +4576,9 @@ Exepected Result:<ul>
                 assert 204 == code, (code, err)
             else:
                 break
+        elif len(states) == 1 and not m_state:
+            # we did abort migration, and the anootation removed
+            break
         sleep(3)
     else:
         raise AssertionError(
